--- a/codingChallenges/style.css
+++ b/codingChallenges/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -38,7 +39,7 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .more-info:link,
@@ -46,9 +47,9 @@ body {
   /* attention to the syntax (,) and order */
   color: black;
   /* Inline element, margin and padding work differently - margin only horizontally, padding seems to work but no new space is added, the element itself stays in the same place */
-  /* display: inline-block;  IT IS BETTER TO WORK WITH THE NEXT ELEMENT */
+  display: inline-block; /*  IT IS BETTER TO WORK WITH THE NEXT ELEMENT */
   margin-top: 15px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .more-info:hover,
@@ -61,7 +62,7 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
-  margin-top: 30px;
+  margin-top: 5px;
   margin-bottom: 15px;
 }
 
@@ -116,9 +117,9 @@ h2::after {
   background-color: #000;
   height: 22px;
   width: 22px;
-  display: inline-block; /* Hence the purpose of the parent class */
-  margin-right: 10px;
-  margin-top: 30px;
+  /* display: inline-block; Hence the purpose of the parent class */
+  /* margin-right: 10px; */
+  /* margin-top: 30px; */
 
   /* position: relative; */
 }
@@ -144,4 +145,64 @@ h2::after {
 
 .color-brown {
   background-color: #885214;
+}
+
+/* working with floats */
+/* .product-description {
+  clear: both; 
+} */
+
+/* 
+.image {
+  float: left;
+  width: 250px;
+  height: 250px;
+}
+.container-shipping {
+  float: left;
+  width: 243px;
+  height: 250px;
+  margin-left: 20px;
+  padding: 10px;
+}
+
+.container-details {
+  float: left;
+  width: 243px;
+  height: 250px;
+  margin-left: 20px;
+  padding: 10px;
+} */
+
+/* flexbox */
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.product-colors {
+  display: flex;
+  margin-top: 20px;
+  gap: 10px;
+}
+.image {
+  float: left;
+  width: 250px;
+  height: 250px;
+}
+.container-shipping {
+  float: left;
+  width: 243px;
+  height: 250px;
+  margin-left: 20px;
+  padding: 10px;
+}
+
+.container-details {
+  float: left;
+  width: 243px;
+  height: 250px;
+  margin-left: 20px;
+  padding: 10px;
 }
