--- a/codingChallenges/style.css
+++ b/codingChallenges/style.css
@@ -175,7 +175,7 @@ h2::after {
 } */
 
 /* flexbox */
-.row {
+/* .row {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -205,4 +205,37 @@ h2::after {
   height: 250px;
   margin-left: 20px;
   padding: 10px;
+} */
+
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.product-colors {
+  display: flex;
+  margin-top: 20px;
+  gap: 10px;
+}
+/* CSS GRID */
+
+.product {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
+}
+
+.product-title {
+  grid-column: 1 / -1;
+}
+
+.container-shipping {
+  padding: 10px 20px;
+}
+.container-details {
+  padding: 10px 20px;
+}
+button {
+  grid-column: 1 / -1;
 }
