--- a/04-omnifood/css/style.css
+++ b/04-omnifood/css/style.css
@@ -1,69 +1,71 @@
-/*
-ALL FOR CONSISTENCY 
+/* HEADER */
+/*****************************************/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
 
----- 01 TYPOGRAPHY SYSTEM ----
-
-- Font sizes (px):
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weights:
-Default: 400
-
-
-- Line heights:
-Default: 1
-
----- 02 COLORS ----
-
-- Primary: #e67e22
-- Tints: #fdf2e9;
-- Shades:
-- Accents:
-- Greys: #555; #333;
-
----- 03 IMAGES - unsplash ----
----- 04 ICONS ----
-
----- 05 SHADOWS ----
-
----- 06 BORDER-RADIUS ----
-
----- 07 WHITESPACE ----
-- Spacing system (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
-/* -------------------------- */
-
-/* First general style - after we might change the font-family and the other rules */
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+  /* Setting a fixed height so later we make it sticky */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+  /* margin-right: auto; it works but remember that this was the trick in the app layout, where we just wanted the last button to go to the right */
 }
 
-html {
-  /* font-size: 10px; */
-  /* 10px / 16px = 0.625 === 62.5% */
-  /* font-size: 62.5%; */
-  /* font-size: 10px; Impossible to change the font size in the browser */
-  /* 10px / 16px = 0.625 --> *100 = 62.5 */
-  font-size: 62.5%;
-  /* Like this we respect the scales and use the trick to facilitate the math */
-}
-body {
-  font-family: sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
+/*****************************************/
+/* HEADER - NAVIGATION */
+/*****************************************/
+
+/* Display */
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
 }
 
-/* -------------------------- */
+/* Styling the links*/
 
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block; /*(good practice)*/
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem; /* Consistent with delivered-text*/
+  /* Transition on the original state element */
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+/* To make sure that this always applies (higher specificity 3) we use the and selector so that it only applies when the element has both classes. */
+/* We need to do this because the code above gets applied to nav-cta and so this one below, however we have one conflict, which is the color */
+/* With this technique of having higher specificity it gets resolved */
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+}
+/*****************************************/
+/* HERO SECTION */
+/*****************************************/
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.8rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 /* Grid layout for the hero */
@@ -74,15 +76,9 @@ body {
   margin: 0 auto;
   align-items: center;
   gap: 9.6rem;
-}
 
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px; /* For small distances we can keep using px */
-  margin-bottom: 3.2rem;
+  /* Adding some padding so that smaller screens don't have the content glued to the edge of the screen  */
+  padding: 0 3.2rem;
 }
 
 .hero-description {
@@ -91,51 +87,220 @@ body {
   margin-bottom: 4.8rem;
 }
 
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  font-size: 2rem;
-  text-decoration: none;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  /* Css animation -  has to be placed in the rule that has the original state. the first value is for the properties that we want to animate, the second is for how much time. The third is the type of the animation */
-
-  transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-  /* border: 3px solid #fff; We can't add a border like this because all the content moves when the button is hovered. For this we use a trick with box shadow to add the border inside: */
-  box-shadow: inset 0 0 0 3px #fff; /* We don't have the inset keyword of border */
-}
 .hero-img {
   width: 100%;
 }
 
-/* Helper class - so that we don't have to wrap both buttons in a flex div and add a gap. REMEMBER THAT WE ALSO SHOULD'T ADD THE MARGIN TO THE BUTTON ITSELF BECAUSE WE MIGHT USE IT FURTHER AHEAD */
-
-/* When we use a helper class, we usually want that the style that it has always gets applied, no matter other that are already on the element- !important */
-.margin-right-sm {
-  margin-right: 1.6rem !important;
+/* Component for meals delivered - we use grid because here we don't care about the size of th columns, we let the content determine the sizes */
+/* For delivered meals to be side by side with the paragraph */
+.delivered-meals {
+  display: flex;
+  margin-top: 8rem;
+  align-items: center; /* Vertically */
+  gap: 1.6rem;
 }
-/*
+/* For images to be side by side */
+.delivered-imgs {
+  display: flex;
+}
+
+/* Selecting the images using the descendent selector */
+
+.delivered-imgs img {
+  /* Usually we don't need to specify the width, but there was a bug in safari at the time of the course that mess the images when they were flex items */
+  /* width: 6.4rem; */
+  height: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem; /* To overlap the images */
+  border: 3px solid #fdf2e9; /* Same color than the background */
+}
+.delivered-imgs img:last-child {
+  margin-right: 0; /* To make the gap visible again, the last img cannot have a negative margin right */
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
+}
+
+/*****************************************/
+/* FEATURED IN SECTION */
+/*****************************************/
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0; /* Taking some space on the bottom */
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around; /* So they don't go so wide */
+}
+
+.logos img {
+  height: 3.2rem;
+  /* Changing the colors of the images IMPORTANT */
+  /* filter: grayscale(100%); black and white, but not with the same intensity */
+  filter: brightness(0);
+  opacity: 50%; /* Visible / Invisible but the middle term is grey*/
+}
+/*****************************************/
+/* HOW IT WORKS SECTION */
+/*****************************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd; /* Rule breaking contrast */
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  /* To center the img */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+/* Circle pseudo elements */
+
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  /* Technique to make it centered and behind of the image */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%; TRICK */
+  /* Because the padding to the bottom is defined on the width of the element */
+  padding-bottom: 60%; /* 60% of parents width */
+  border-radius: 50%;
+  background-color: #fdf2e9;
+
+  /* Sending it back with Z-INDEX - IMPORTANT RULE-PROPERTY !!!*/
+  z-index: -2;
+}
+/* Creating the other circle - we cannot use before again */
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  border-radius: 50%;
+  background-color: #fae5d3;
+
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
+}
+
+/*****************************************/
+/* HOW IT WORKS SECTION */
+/*****************************************/
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  overflow: hidden; /* ANOTHER use for overflow, because the image and the text of the other card (or any element) where covering the borders */
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
+}
+.tag {
+  display: inline-block; /* To apply some paddings */
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 100px;
+  font-weight: 600;
+}
+/* Variations */
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+.tag--vegan {
+  background-color: #94d82d;
+}
+.tag--paleo {
+  background-color: #ffd43b;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22; /* Depending on the icons we might need to use fill, stroke, color or even font-size to style them */
+}
+
+/* Redefining the strong element so it doesn't get so bold. goes to the general of course */
+/* strong {
+  font-weight: 500;
+} */
+/* ------------------------------------
 Things to take:
 
 - Responsive design. There are essentially four ingredients to responsive designs:
@@ -161,6 +326,8 @@ We only use them at the end.
 8 - The button animation.
 
 9 - The helper function and the highest priority with the !important keyword. It is very common to use with margins that we don't want to apply directly on the elements in order to avoid conflict when we reuse them.
+
+10 - The hero container should be a little wider for aesthetics.
 */
 
 /*
@@ -187,4 +354,37 @@ Instead we
   font-size: 2rem;
   color: #fff;
 }
+*/
+
+/* Create a reusable grid */
+
+/* .grid { */
+/* grid container*/
+/* display: grid;
+  gap: 9.6rem;
+} */
+
+/* .section-how div div { */
+/* Selecting all the div inside of the .section-how container */
+/* padding: 100px;
+  font-size: 50px;
+  background-color: #333;
+} */
+
+/* .grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+} */
+/* Then we can copy it and specify the number of columns for each class */
+
+/* .grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+} */
+
+/* Now we just have to add the classes to the elements*/
+
+/* -------- Generic centered container -----
+This container is going to be the element that we will always use in order to center the content on the page (inside of the viewport).
 */
