--- a/04-omnifood/css/general.css
+++ b/04-omnifood/css/general.css
@@ -28,7 +28,11 @@ Paragraph default: 1.6
 - Tints: 
 #fdf2e9;
 #fae5d3
-- Shades: #cf711f
+#eb984e
+- Shades: 
+#cf711f
+
+#45260a
 - Accents:
 #51cf66
 #94d82d
@@ -36,13 +40,16 @@ Paragraph default: 1.6
 - Greys:
 #555; 
 #333;
+#888
 #6f6f6f lightest grey allowed on #fdf2e9
+#767676 lightest grey allowed on #fff
+
 
 ---- 03 IMAGES - unsplash ----
 ---- 04 ICONS ----
 
 ---- 05 SHADOWS ----
-
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 ---- 06 BORDER-RADIUS ----
 Default: 9px
 Medium: 11px
@@ -121,7 +128,7 @@ strong {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
-
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block; /* Always (good practice), for adding the padding*/
@@ -134,6 +141,11 @@ strong {
 
   /* transition: background-color 0.3s; Notice that, like this, we are only transitioning the background color and not the box shadow (what creates the border in the outline button) which creates a weird effect, so we need to transition all properties */
   transition: all 0.3s;
+
+  /* ONLY FOR THE BTN CLASS - the form button */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--full:link,
@@ -158,6 +170,20 @@ strong {
   /* border: 3px solid #fff; We can't add a border like this because all the content moves when the button is hovered. For this we use a trick with box shadow to add the border inside: */
   box-shadow: inset 0 0 0 3px #fff; /* We don't have the inset keyword of border */
 }
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  /* this is now a grid item, remember that the form is grid. so it is this big because it occupies all the space of its grid container */
+  align-self: end; /* So it gets aligned with the other */
+  padding: 1.137rem;
+  /* padding: 1.2rem; */
+}
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
 .list {
   list-style: none;
   display: flex;
@@ -256,4 +282,14 @@ strong {
 }
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+/* If we want to change or remove the focus pseudo class */
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
