--- a/04-omnifood/css/style.css
+++ b/04-omnifood/css/style.css
@@ -507,6 +507,189 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
+/*****************************************/
+/* CTA SECTION */
+/*****************************************/
+.section-cta {
+  /* top right bottom left */
+  /* padding: 9.6rem 0 12.8rem 0; */
+  /* top horizontal left */
+  padding: 4.8rem 0 12.8rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr; /* 2/3 1/3*/
+  /* background-color: #e67e22; */
+  /* Same as meal for consistency */
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  background-image: linear-gradient(
+    to right bottom,
+    #eb984e,
+    #e67e22
+  ); /* To left, to right, to right bottom ... */
+  overflow: hidden;
+
+  /*Temporary so than later the content dictates the space */
+  /* height: 50rem; */
+}
+
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #45260a;
+}
+/* Because heading-secondary overwrites .cta-text-box, so overwriting some properties of the general class */
+.cta .heading-secondary {
+  /* color: #45260a; */
+  /* We could also have used inherited, because the parent is cta-text-box */
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta-img-box {
+  /* Syntax for path */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+/* Notice that we didn't add any classes to the form elements because they already have many attributes, so, to select them we use the descendence selector */
+
+.cta-form label {
+  display: block; /* to have its own line */
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  /* So that the text in the placeholders inherit the font family */
+  font-family: inherit; /* From body */
+  color: inherit; /* From cta-text-box / closest parent */
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+/* New pseudo element to style the text in the placeholders */
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/* As you might notice, the css rule that we've establish for the btn did not get applied. That's because this button is not an anchor/link (does not have href) */
+/* For this we've added the class btn to the general styles and did some transformations there that do not affect the other buttons */
+/* Also, to fake the need for another form button, we created btn--form and styled it in general, so we don't need to do it here */
+/* .cta-form button {
+} */
+
+/*****************************************/
+/* FOOTER */
+/*****************************************/
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+/* creating a grid for the footer because we have (visually) less space between the two columns, remember that the footer container is already a grid, so we just need to declare and resize the columns */
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+/* Remember that we've added the class footer link also to the social links first, bu we need to add more stile */
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+/* Now to add space after the logo image, its an anchor */
+.footer-logo {
+  display: block; /* anchors are inline, don't forget*/
+  margin-bottom: 3.2rem;
+}
+
+/* To make the icons bigger */
+.social-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+/*copyright text*/
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+  margin-top: auto;
+}
+.logo-col {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; Remember that our solution kind of fixed the problem, however we want the icons to be closer to the logo*/
+  /* The solution for this is just to set margin top to auto in the copyright */
+}
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+/* To remove the default italic of the address element */
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+/* To add space between the paragraphs in the address. IMPORTANT - WE CAN DO THIS IN THREE WAYS: HELPER CLASSES, SELECTING THE CHILD THAT WE WANT TO CHANGE OR GIVE IT A CLASS DIRECTLY */
+.address {
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
+}
+
 /* ------------------------------------
 Things to take:
 
